# CFD_Simulation_Engine

./: .gitattributes  .gitignore  CFD_8c.html  CFD_8c.js  CFD_8c_source.html  CFD_8h.html  CFD_8h.js  CFD_8h_source.html  CMakeLists.txt  Doxyfile  Makefile  P__equation_8c.html  P__equation_8c.js  P__equation_8c_source.html  P__equation_8h.html  P__equation_8h.js  P__equation_8h_source.html  README.md  README_8md.html  SCGS_8c.html  SCGS_8c.js  SCGS_8c_source.html  SCGS_8h.html  SCGS_8h.js  SCGS_8h_source.html  SCGS__BC_8c.html  SCGS__BC_8c.js  SCGS__BC_8c_source.html  SCGS__BC_8h.html  SCGS__BC_8h.js  SCGS__BC_8h_source.html  SIMPLE_8c.html  SIMPLE_8c.js  SIMPLE_8c_source.html  SIMPLE_8h.html  SIMPLE_8h.js  SIMPLE_8h_source.html  U__equation_8c.html  U__equation_8c.js  U__equation_8c_source.html  (+363 more)
.github/workflows/: doxygen-action.yml  main.yml
apps/: CMakeLists.txt  bench.c  main.c
core/: CFD.c  CFD.h  CMakeLists.txt  README.md
core/engine/: CMakeLists.txt  engine.c  engine.h
core/engine/mesh/: CMakeLists.txt  mesh.c  mesh.h
core/engine/methods/: CMakeLists.txt  SCGS.c  SCGS_BC.c  SCGS_BC.h  SIMPLE.c  methods.c  methods.h
core/engine/methods/SCGS/: CMakeLists.txt  SCGS.c  SCGS.h  SCGS_BC.c  __SCGS_BC.c
core/engine/methods/SIMPLE/: CMakeLists.txt  SIMPLE.c  SIMPLE.h
core/engine/methods/SIMPLE/equations/: CMakeLists.txt  P_equation.c  P_equation.h  U_equation.c  U_equation.h  V_equation.c  V_equation.h
core/engine/schemes/: CMakeLists.txt  convection.c  convection.h  diffusion.h
core/in/: CMakeLists.txt  in.h
core/in/parsers/: CMakeLists.txt  cmd.c  json.c
data/: input.json  output.csv
datasets/: 01_5_5_100_UDS_08.json  02_129_129_1000_UDS_08.json  03_40_40_1000_QUICK_08.json  04_40_40_1000_UDS_05.json  datasets_generator.py  generator.py  input.json
libs/: CMakeLists.txt
libs/cALGEBRA/: CMakeLists.txt  cMAT.c  cMAT.h  cMAT2D.c  cMAT2D.h  cMAT3D.c  cMAT3D.h  cVEC.c  cVEC.h
libs/cFILE/: cFILE.c  cFILE.h
libs/cGETOPT/: CMakeLists.txt
libs/cJSON/: cJSON.h
results/plotting/: CFD_Plotting.m  Ghia_Solution_U.xlsx  Ghia_Solution_V.xlsx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  (+81 more)
sim_plotting/: CFD_Plotting.m
simulations/input/: generator.py  input.json
simulations/plotting/: CFD_Plotting.m  visualisation_still_frame.m
src/: CFD.c  CFD.h  CMakeLists.txt  main.c  main.h
src/engine/: CMakeLists.txt  engine.c  engine.h
src/engine/mesh/: CMakeLists.txt  mesh.c  mesh.h
src/engine/methods/: SCGS.c  SCGS.h  SCGS_BC.c  SCGS_BC.h  SIMPLE.c  SIMPLE.h  methods.c  methods.h
src/engine/schemes/: convection.c  convection.h  diffusion.c  diffusion.h  schemes.h
src/in/: CMakeLists.txt  in.c  in.h
src/in/parsers/: CMakeLists.txt  cmd.c  cmd.h  json.c  json.h
src/utils/cALGEBRA/: cMAT.c  cMAT.h  cVEC.c  cVEC.h
src/utils/cFILE/: cFILE.c  cFILE.h
src/utils/cJSON/: cJSON.h
src/utils/cLOG/: cLOG.c  cLOG.h
